<resources>

    <string name="app_name">Fun One</string>
    <string name="action_settings">Settings</string>

    <!--Social -->
    <string name="dev_facebook_app_id">150270962047781</string>
    <integer name="com_vk_sdk_AppId">5527319</integer>
    <string name="dev_google_app_id">742452319674-bfd0rfch3kv1v5d6g1t44dgbeipa5pb5.apps.googleusercontent.com</string>

    <!--SocialLoginActivity-->
    <string name="log_in">Log In</string>

    <string name="com_facebook_loginview_log_out_button">Facebook</string>
    <string name="join_and_have_fun">Join us and have more fun</string>
    <string name="terms_privacy_policy">Terms of Service and Private Police</string>
    <string name="google">Google</string>
    <string name="vk">VKontakte</string>

    <!--Search-->
    <string name="search">Search</string>
    <string name="fun_search_hint">FunOne search</string>
    <string name="popular_hash_tag">Popular hashtag</string>

    <!--SHARE-->
    <string name="share">Share…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!--BestCommentsActivity-->
    <string name="best_comments">Best comments</string>
    <string name="settings">Settings</string>
    <string name="add_comment_here">Add a comment here…</string>

    <string name="title_activity_all_coments">AllComentsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="all_comments">All Comments</string>
    <string name="edit_photo">Edit photo</string>
    <string name="add_your_fun_one">Add your FunOne</string>
    <string name="linked_posts">Liked posts</string>
    <string name="my_posts">My posts</string>
    <string name="linked_profile_empty">Here you find your posts!</string>
    <string name="liked_profile_empty">Here you find liked posts!</string>
    <string name="my_posts_empty">Here you find your posts!</string>

    <string name="content_settings">Content settings</string>
    <string name="auto_play">Autoplay Video and Gif</string>
    <string name="notifications">Push notification</string>
    <string name="language">Language</string>
    <string name="connected_accounts">Linked Accounts</string>
    <string name="facebook">Facebook</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="logout"><u>Log Out</u></string>

    <!--ERRORS-->
    <string name="err_log_in_f">Error has occurred while logging in with Facebook</string>
    <string name="err_log_in_g">Error has occurred while logging in with Google</string>
    <string name="err_log_in_v">Error has occurred while logging in with VK</string>
    <string name="err_unknown">Unknown Error</string>
    <string name="err_no_internet">No Internet connection</string>

    <string name="http_not_valid_response_object">Unable to get response from server. Please, try again</string>
    <string name="http_bad_request">Bad Request</string>
    <string name="http_forbidden">Forbidden</string>
    <string name="http_not_found">Not Found</string>
    <string name="http_server_error">Internal Server Error</string>


</resources>
