<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <com.www.funone.view.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/content_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:custom_font="RobotoRegular" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_huge_plus"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/auto_play"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:custom_font="RobotoRegular" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_auto_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.MyTheme"
            app:showText="false" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginRight="@dimen/spacing_big"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.MyTheme"
            app:showText="false" />

        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_huge_plus"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:custom_font="RobotoRegular" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginRight="@dimen/spacing_big"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:custom_font="RobotoRegular" />

        <ImageView
            android:layout_width="14dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:adjustViewBounds="true"
            android:src="@drawable/arrow_r" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/gray_dark"
        android:visibility="gone" />

    <com.www.funone.view.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/connected_accounts"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:custom_font="RobotoRegular" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_huge_plus"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/facebook"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

        <com.www.funone.view.TextViewFont
            android:id="@+id/tv_facebook_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:text="@string/disconnect"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginRight="@dimen/spacing_big"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_huge_plus"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/google"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

        <com.www.funone.view.TextViewFont
            android:id="@+id/tv_google_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:text="@string/disconnect"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginLeft="@dimen/spacing_big"
        android:layout_marginRight="@dimen/spacing_big"
        android:background="@color/gray_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.www.funone.view.TextViewFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_huge_plus"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/vk"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

        <com.www.funone.view.TextViewFont
            android:id="@+id/tv_vk_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_big_plus"
            android:text="@string/disconnect"
            android:textColor="@color/hint_gray"
            android:textSize="@dimen/text_size_micro"
            app:custom_font="RobotoRegular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/gray_dark" />

    <com.www.funone.view.TextViewFont
        android:id="@+id/tv_log_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        app:custom_font="RobotoRegular" />


</LinearLayout>