<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContentFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:descendantFocusability="afterDescendants"
        android:gravity="bottom"
        sothree:umanoPanelHeight="0dp"
        sothree:umanoShadowHeight="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sliding_share_panel_height"
            android:background="@color/white"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lin_share"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:src="@drawable/share_material_icons_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"

                    android:text="@string/share"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_save"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:src="@drawable/archive_material_icons_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"

                    android:text="@string/save"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_cancel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:src="@drawable/cancel_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

</RelativeLayout>
